# ai-skill-manager

./: .gitignore  CHANGELOG.md  Makefile  README.md  ai-skills.yaml  pyproject.toml
.agents/skills/close-todo/: SKILL.md
.agents/skills/code-coverage/: SKILL.md
.agents/skills/documentation/: SKILL.md
.agents/skills/implementition-plan-metadata/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: master.yml  pr.yml
.tasks/: refactory.md
docs/: config.md  discovery.md  install.md  run.md
docs/features/: sync-pipeline.md
docs/skills/: ai-skill-manager.skill.md
profiling/: ai-skills.yaml
script/: pip_install.bash
src/ai_skill_manager/: __init__.py  cli.py  config.py  core.py  profiling.py  progress.py  sync_exception.py  utils.py  validation_settings.py
src/ai_skills_manager/: core.py
tests/: test_build_sources.py  test_check_command.py  test_cli.py  test_compute_skill_hash.py  test_config.py  test_core.py  test_discover_command.py  test_models.py  test_multi_target_sync.py  test_source_parser.py  test_sync.py  test_sync_command.py  test_tag_filter.py  test_utils.py
tests/command/: test_sync_command.py
tests/commands/: __init__.py  test_check_cli.py  test_discover_cli.py  test_sync_cli.py  test_sync_formatter.py
tests/entities/: __init__.py  test_skill_at_path_finder.py  test_skill_conversion.py  test_skill_name.py  test_skill_source_link.py  test_skill_v2.py  test_source.py
tests/functions/: test_copied_link_rewriter.py  test_copy_skills.py  test_file_discovery.py  test_incremental_copy_skills.py  test_orphan_removing_copy_skills.py  test_skill_discovery.py  test_skill_file_copier.py  test_skill_hash.py  test_skill_relation_queuer.py
tests/test_adapters/: test_adapter.py  test_adapter_message.py  test_claude_property_adapter.py  test_link_adapter.py  test_link_updater.py  test_link_updater_models.py
tests/test_commands/: test_discover_cli.py  test_sync_cli.py  test_sync_formatter.py
tests/test_discovery/: test_auto.py  test_directory.py  test_flat.py  test_github.py
tests/test_link/: test_link_builders.py
tests/test_models/: test_link_with_context.py  test_skill_file.py
tests/test_services/: test_discover.py  test_validate.py
tests/test_validators/: test_conflict_validation_rule.py  test_link_validation_rule.py  test_name_validation_rule.py  test_validation_models.py  test_validator.py
(+430 files in other folders)
