[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-skill-manager"
version = "1.1.0"
description = "Sync AI agent skills across projects"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "pyyaml",
    "rich",
]

[project.scripts]
ai-skill-manager = "ai_skill_manager.cli:main"
aism = "ai_skill_manager.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build",
    "twine",
]

[tool.setuptools.packages.find]
where = ["src"]
