[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-skill-manager"
version = "1.2.2"
description = "Sync AI agent skills into .agents/skills/ from local directories or GitHub repositories"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    { name = "InsonusK" },
]
keywords = [
    "ai",
    "agent",
    "skills",
    "cli",
    "sync",
    "github",
    "kimi",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=5.1",
    "rich>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/InsonusK/ai-skill-manager"
Repository = "https://github.com/InsonusK/ai-skill-manager.git"
Documentation = "https://github.com/InsonusK/ai-skill-manager/tree/master/docs"
Issues = "https://github.com/InsonusK/ai-skill-manager/issues"
"Skills examples" = "https://github.com/InsonusK/ai-skills.git"

[project.scripts]
ai-skill-manager = "ai_skill_manager.cli:main"
aism = "ai_skill_manager.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build",
    "twine",
]

[tool.setuptools.packages.find]
where = ["src"]
